--- a/src/components/Header/header.css
+++ b/src/components/Header/header.css
@@ -17,6 +17,7 @@ header{
 
 .item-menu{
     text-decoration: none;
+    font-size: 18px;
     cursor: pointer;
     color: black;
     margin-top: 100px;
@@ -28,11 +29,20 @@ header{
     transition: all 0.5s;
 }
 
-img{
+.logo img{
     cursor: pointer;
     width: 150px;
     height: 100px;
     margin-top: 70px;
     align-items: center;
     justify-content: center;
+}
+
+.usuarioLogo img{
+    cursor: pointer;
+    width: 50px;
+    height: 50px;
+    align-items: center;
+    justify-content: center;
+    margin-top: 100px;
 }
